# afc-coursework

./: .gitignore  CMakeLists.txt  main_widget.cxx  main_widget.hxx
convex_hull/: CMakeLists.txt  convex_hull.cxx  convex_hull.hxx  pointf.cxx  pointf.hxx
